infra/k8s/romeo-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: romeo-np-srv
spec:
  type: NodePort
  selector:
    app: romeo
  ports:
    - name: romeo
      protocol: TCP
      port: 3001
      targetPort: 3001
